[package]
name = "rest-api"
version = "0.1.0"
description = "A rest-api to try/test diesel"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
clap = { version = "3.0.5", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "time", "serde_json"] }
r2d2 = "0.8.9"
serde = "1.0.133"
env_logger = "0.9.0"
